[tool.poetry]
name = "entity-ppo-demo"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
entity-gym = "^0.1.7"
enn-trainer = "^0.1.7"

[tool.poetry.group.gym-microrts.dependencies]
gym-microrts = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
